docs: update mdbook

--- a/mobitia_doc/src/05_ui.md
+++ b/mobitia_doc/src/05_ui.md
@@ -53,3 +53,15 @@ pub fn draw(
     - 点群は、その**エッジらしさ (`edge_ness`)** に応じて赤（エッジ）〜緑（平面）のグラデーションで色付けされます。
     - エッジらしい点からは、その点の**法線ベクトル**が黄色の線で描画されます。
     - **コーナーらしさ (`corner_ness`)** が高いと判断された点は、マゼンタ色の大きな円で強調表示されます。
+
+#### `nav_screen.rs`
+- **役割**: `AppMode::Nav` で使用され、自律移動中の状態を総合的に可視化します。
+- **描画内容**:
+    - **メインビュー**: 地図全体、または読み込まれた領域全体を俯瞰します。
+    - **拡大サブウィンドウ (Zoom PIP)**: 画面右下に、ロボット周辺（デフォルト4m四方）を拡大表示するピクチャ・イン・ピクチャ (Picture-In-Picture) を表示します。
+        - これにより、狭い場所での壁とのクリアランスや、リカバリー動作時の詳細な挙動を、マウス操作なしで常時確認できます。
+        - 表示範囲は `config.toml` の `[ui] nav_zoom_view_size` で変更可能です。
+    - **経路**:
+        - **Global Path**: `trajectory.txt` から読み込んだ初期経路（薄い青）。
+        - **Local Path**: Elastic Band によって障害物を避けるように変形された現在の計画経路（緑/シアン）。
+    - **ロボット**: 現在位置、向き、および物理的なフットプリント（矩形）を描画します。
